--- a/src/test/java/configuration.properties
+++ b/src/test/java/configuration.properties
@@ -12,3 +12,9 @@ autoUrl= https://automationexercise.com/
 newusername= aurora
 
 automationemailadress = aurora11@gmail.com
+
+qualityDemyUrlNevzat=https://qualitydemy.com/
+
+qualityDemyGecerliMailNevzat= user_1106149@login.com
+
+qualityDemyGecerliPasswordNevzat= 1221379599
