--- a/src/test/java/configuration.properties
+++ b/src/test/java/configuration.properties
@@ -18,3 +18,6 @@ qualityDemyUrlNevzat=https://qualitydemy.com/
 qualityDemyGecerliMailNevzat= user_1106149@login.com
 
 qualityDemyGecerliPasswordNevzat= 1221379599
+
+seoMetaKeywordsTextbox=Java
+seoMetaKeywordsTextbox2=qualityDemy
